--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+kittycad = "0.2.34"
+serenity = "0.11.6"
+tokio = { version = "1.33.0", features = ["full"] }
