--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = { version = "1.0.75", features = ["backtrace"] }
 clap = { version = "4.4.4", features = ["cargo", "derive", "env", "unicode"] }
 kittycad = "0.2.34"
+lazy_static = "1.4.0"
 log = { version = "0.4.20", features = ["serde"] }
 serenity = "0.11.6"
 slog = "2.7.0"
