--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,13 +7,28 @@ edition = "2021"
 [dependencies]
 anyhow = { version = "1.0.75", features = ["backtrace"] }
 clap = { version = "4.4.4", features = ["cargo", "derive", "env", "unicode"] }
+dropshot = { git = "https://github.com/oxidecomputer/dropshot", branch = "main" }
 kittycad = "0.2.34"
 lazy_static = "1.4.0"
 log = { version = "0.4.20", features = ["serde"] }
+schemars = { version = "0.8", features = ["chrono", "uuid1"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0.107"
 serenity = {version = "0.11.6", features = ["framework", "standard_framework"]}
+signal-hook = "0.3.17"
 slog = "2.7.0"
 slog-async = "2.8.0"
 slog-json = "2.6.1"
 slog-term = "2.9.0"
 tokio = { version = "1.33.0", features = ["full"] }
 tracing-subscriber = { version = "0.3.17", features = ["registry", "std", "fmt", "smallvec", "ansi", "tracing-log", "json"] }
+
+[dev-dependencies]
+expectorate = "1"
+# futures is necessary for test-context
+futures = "0.3"
+openapi-lint = { git = "https://github.com/oxidecomputer/openapi-lint", branch = "main" }
+openapiv3 = "1"
+portpicker = "^0.1.1"
+pretty_assertions = "1"
+test-context = "^0.1.3"
