--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ dropshot = { git = "https://github.com/oxidecomputer/dropshot", branch = "main" 
 kittycad = "0.2.34"
 lazy_static = "1.4.0"
 log = { version = "0.4.20", features = ["serde"] }
+reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
 schemars = { version = "0.8", features = ["chrono", "uuid1"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.107"
@@ -24,6 +25,7 @@ tokio = { version = "1.33.0", features = ["full"] }
 tracing-subscriber = { version = "0.3.17", features = ["registry", "std", "fmt", "smallvec", "ansi", "tracing-log", "json"] }
 
 [dev-dependencies]
+async-trait = "0.1.74"
 expectorate = "1"
 # futures is necessary for test-context
 futures = "0.3"
