--- a/kubernetes/corp/virginia/secrets.yaml
+++ b/kubernetes/corp/virginia/secrets.yaml
@@ -14,6 +14,7 @@ spec:
           discord_client_id: "{{ .discordClientId }}"
           discord_client_secret: "{{ .discordClientSecret }}"
           discord_redirect_uri: "{{ .discordRedirectUri }}"
+          kittycad_token: "{{ .kittycadToken }}"
   data:
     - secretKey: discordToken
       remoteRef:
@@ -31,3 +32,7 @@ spec:
       remoteRef:
         key: /corp/text-to-cad-discord-bot/discord
         property: redirect_uri
+    - secretKey: kittycadToken
+      remoteRef:
+        key: /corp/text-to-cad-discord-bot/kittycad
+        property: token
