--- a/.github/workflows/cargo-test.yml
+++ b/.github/workflows/cargo-test.yml
@@ -36,13 +36,14 @@ jobs:
         uses: Swatinem/rust-cache@v2.7.0
 
       - name: Install deps
+        shell: bash
         run: |
           sudo apt-get update && sudo apt-get install -y \
-	            ca-certificates \
-	            libssl3 \
-              libfreetype6 \
-	            libfontconfig1 \
-	            --no-install-recommends
+            ca-certificates \
+            libssl3 \
+            libfreetype6 \
+            libfontconfig1 \
+            --no-install-recommends
 
       - name: cargo test
         shell: bash
