--- a/.github/workflows/cargo-test.yml
+++ b/.github/workflows/cargo-test.yml
@@ -48,14 +48,14 @@ jobs:
       - name: cargo test
         shell: bash
         run: |
-          cargo llvm-cov nextest --all --lcov --output-path lcov.info --test-threads=1 --no-fail-fast
+          cargo nextest --all --test-threads=1 --no-fail-fast
         env:
           KITTYCAD_API_TOKEN: ${{secrets.KITTYCAD_API_TOKEN}}
-      - name: Upload to codecov.io
-        uses: codecov/codecov-action@v3
-        with:
-          token: ${{secrets.CODECOV_TOKEN}}
-          fail_ci_if_error: true
-          flags: unittests
-          verbose: true
-          files: lcov.info
+            #- name: Upload to codecov.io
+            #uses: codecov/codecov-action@v3
+            #with:
+            #token: ${{secrets.CODECOV_TOKEN}}
+            # fail_ci_if_error: true
+            #flags: unittests
+            #verbose: true
+            # files: lcov.info
