--- a/.github/workflows/cargo-test.yml
+++ b/.github/workflows/cargo-test.yml
@@ -48,7 +48,7 @@ jobs:
       - name: cargo test
         shell: bash
         run: |
-          cargo nextest --all --test-threads=1 --no-fail-fast
+          cargo nextest run --all --test-threads=1 --no-fail-fast
         env:
           KITTYCAD_API_TOKEN: ${{secrets.KITTYCAD_API_TOKEN}}
             #- name: Upload to codecov.io
