--- a/.github/workflows/cargo-test.yml
+++ b/.github/workflows/cargo-test.yml
@@ -49,6 +49,7 @@ jobs:
       - name: cargo test
         shell: bash
         run: |
+          cargo build --all
           xvfb-run -a  cargo nextest run --all --test-threads=1 --no-fail-fast
         env:
           KITTYCAD_API_TOKEN: ${{secrets.KITTYCAD_API_TOKEN}}
