--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,13 @@ edition = "2021"
 
 [dependencies]
 anyhow = { version = "1.0.75", features = [] }
+bson = { version = "2.7.0", features = ["uuid-1", "chrono"] }
 clap = { version = "4.4.8", features = ["cargo", "derive", "env", "unicode"] }
+dashmap = "5.5.3"
 dropshot = { git = "https://github.com/oxidecomputer/dropshot", branch = "main" }
+futures = "0.3"
 git_rev = "0.1.0"
-kittycad = "0.2.41"
+kittycad = "0.2.42"
 lazy_static = "1.4.0"
 log = { version = "0.4.20", features = ["serde"] }
 parse-display = "0.8.2"
@@ -24,9 +27,8 @@ slog = "2.7.0"
 slog-async = "2.8.0"
 slog-json = "2.6.1"
 slog-term = "2.9.0"
-three-d = { version = "0.16.3", default-features = false, features = ["headless"] }
-three-d-asset = { version = "0.6.0", features = ["png", "gltf", "data-url"] }
 tokio = { version = "1.34.0", features = ["full"] }
+tokio-tungstenite = { version = "0.20.1", features = ["rustls-tls-native-roots"] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["registry", "std", "fmt", "smallvec", "ansi", "tracing-log", "json"] }
 uuid = { version = "1.5.0", features = ["v4", "serde"] }
