--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ anyhow = { version = "1.0.83", features = [] }
 bson = { version = "2.10.0", features = ["uuid-1", "chrono"] }
 clap = { version = "4.5.4", features = ["cargo", "derive", "env", "unicode"] }
 dashmap = "5.5.3"
-dropshot = { git = "https://github.com/oxidecomputer/dropshot", branch = "main" }
+dropshot = { version = "0.10" }
 futures = "0.3"
 git_rev = "0.1.0"
 kittycad = "0.3.1"
