--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ anyhow = { version = "1.0.95", features = [] }
 bson = { version = "2.13.0", features = ["uuid-1", "chrono"] }
 clap = { version = "4.5.23", features = ["cargo", "derive", "env", "unicode"] }
 dashmap = "6.1.0"
-dropshot = { version = "0.12" }
+dropshot = { version = "0.14" }
 futures = "0.3"
 git_rev = "0.1.0"
 kittycad = "0.3.25"
@@ -19,6 +19,7 @@ parse-display = "0.10.0"
 poise = "0.6.1"
 reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
 schemars = { version = "0.8", features = ["chrono", "uuid1"] }
+semver = "1.0.24"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.132"
 signal-hook = "0.3.17"
