--- a/.github/workflows/cargo-build.yml
+++ b/.github/workflows/cargo-build.yml
@@ -5,6 +5,7 @@ on:
       - Cargo.toml
       - Cargo.lock
       - .github/workflows/cargo-build.yml
+  pull_request:
 name: cargo build
 jobs:
   cargobuild:
