--- a/.github/workflows/cargo-test.yml
+++ b/.github/workflows/cargo-test.yml
@@ -47,7 +47,7 @@ jobs:
           cargo build --all
           cargo nextest run --all --test-threads=1 --no-fail-fast
         env:
-          KITTYCAD_API_TOKEN: ${{secrets.KITTYCAD_API_TOKEN}}
+          ZOO_API_TOKEN: ${{secrets.KITTYCAD_API_TOKEN}}
             #- name: Upload to codecov.io
             #uses: codecov/codecov-action@v3
             #with:
